Clean code and add CI.

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,20 @@ per-file-ignores =
 warn_return_any = True
 warn_unused_configs = True
 namespace_packages = True
+
+[tox:tox]
+skipsdist = true
+envlist = py38-lint
+
+[testenv:py38-lint]
+skip_install = true
+deps =
+    black
+    mypy
+    flake8
+    flake8-black
+    PyQt5-stubs
+commands =
+    black generator main.py --check --diff
+    flake8 generator main.py
+    mypy generator main.py
